--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="home-content">
             <div class="text-1">Hello, This is</div>
             <div class="text-2"> Rajaram </div>
-            <div class="text-3">And I'm a <span class="typing" > Data analysis</span></div>
+            <div class="text-3">And I'm a <span class="typing" Data analysis></span></div>
             <li><a href="con01.html" class="menu-btn"><strong>Hire Me</strong></a></li>
           </div>
         </div>
@@ -351,5 +351,4 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js'></script>
     <script src="script.js"></script>
   </body>
-
 </html>
